# eil_embeddings

./: Copy_of_embedding_model_finetune.ipynb  Untitled-1.py  finetune_embeddings.py  finetuning.ipynb  fintuning.py  full_qa_dataset.json  pyproject.toml  requirements.txt  train_dataset.json
