[project]
name = "eil-embeddings"
version = "0.1.0"
description = ""
authors = [
    {name = "Divyanshu Bansal",email = "bansal_divyanshu@outlook.com"}
]
readme = "README.md"
requires-python = "3.10.18"
dependencies = [
    "yarl (==1.20.1)",
    "accelerate (==1.8.1)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.13)",
    "aiosignal (==1.4.0)",
    "aiosqlite (==0.21.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asttokens (==3.0.0)",
    "async-timeout (==5.0.1)",
    "attrs (==25.3.0)",
    "azure-core (==1.35.0)",
    "azure-identity (==1.23.0)",
    "banks (==2.1.3)",
    "beautifulsoup4 (==4.13.4)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "cohere (==5.15.0)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "cryptography (==45.0.5)",
    "dataclasses-json (==0.6.7)",
    "datasets (==3.6.0)",
    "debugpy (==1.8.14)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "deprecated (==1.2.18)",
    "dill (==0.3.8)",
    "dirtyjson (==1.0.8)",
    "distro (==1.9.0)",
    "eval-type-backport (==0.2.2)",
    "exceptiongroup (==1.3.0)",
    "executing (==2.2.0)",
    "fastavro (==1.11.1)",
    "filelock (==3.18.0)",
    "filetype (==1.2.0)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.3.0)",
    "greenlet (==3.2.3)",
    "griffe (==1.7.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.0)",
    "huggingface-hub (==0.33.2)",
    "idna (==3.10)",
    "ipykernel (==6.29.5)",
    "ipython (==8.37.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "jiter (==0.10.0)",
    "joblib (==1.5.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "llama-cloud (==0.1.30)",
    "llama-cloud-services (==0.6.41)",
    "llama-index (==0.12.47)",
    "llama-index-agent-openai (==0.4.12)",
    "llama-index-cli (==0.4.4)",
    "llama-index-core (==0.12.47)",
    "llama-index-embeddings-adapter (==0.3.0)",
    "llama-index-embeddings-openai (==0.3.1)",
    "llama-index-finetuning (==0.3.2)",
    "llama-index-indices-managed-llama-cloud (==0.7.9)",
    "llama-index-instrumentation (==0.2.0)",
    "llama-index-llms-azure-openai (==0.3.4)",
    "llama-index-llms-mistralai (==0.4.0)",
    "llama-index-llms-openai (==0.4.7)",
    "llama-index-multi-modal-llms-openai (==0.5.3)",
    "llama-index-postprocessor-cohere-rerank (==0.3.0)",
    "llama-index-program-openai (==0.3.2)",
    "llama-index-question-gen-openai (==0.3.1)",
    "llama-index-readers-file (==0.4.11)",
    "llama-index-readers-llama-parse (==0.4.0)",
    "llama-index-workflows (==1.0.1)",
    "llama-parse (==0.6.41)",
    "markupsafe (==3.0.2)",
    "marshmallow (==3.26.1)",
    "matplotlib-inline (==0.1.7)",
    "mistralai (==1.9.1)",
    "mpmath (==1.3.0)",
    "msal (==1.32.3)",
    "msal-extensions (==1.3.1)",
    "multidict (==6.6.3)",
    "multiprocess (==0.70.16)",
    "mypy-extensions (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.4.2)",
    "nltk (==3.9.1)",
    "numpy (==2.2.6)",
    "openai (==1.93.1)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pillow (==11.3.0)",
    "platformdirs (==4.3.8)",
    "prompt-toolkit (==3.0.51)",
    "propcache (==0.3.2)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pyarrow (==20.0.0)",
    "pycparser (==2.22)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "pyjwt (==2.10.1)",
    "pypdf (==5.7.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pyyaml (==6.0.2)",
    "pyzmq (==27.0.0)",
    "regex (==2024.11.6)",
    "requests (==2.32.4)",
    "safetensors (==0.5.3)",
    "scikit-learn (==1.7.0)",
    "scipy (==1.15.3)",
    "sentence-transformers (==5.0.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "sqlalchemy (==2.0.41)",
    "stack-data (==0.6.3)",
    "striprtf (==0.0.26)",
    "sympy (==1.14.0)",
    "tenacity (==9.1.2)",
    "threadpoolctl (==3.6.0)",
    "tiktoken (==0.9.0)",
    "tokenizers (==0.21.2)",
    "torch (==2.7.1)",
    "tornado (==6.5.1)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "transformers (==4.53.1)",
    "types-requests (==2.32.4.20250611)",
    "typing-inspect (==0.9.0)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "wcwidth (==0.2.13)",
    "wrapt (==1.17.2)",
    "xxhash (==3.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
